devuelve -> retorna, y quitando entradas obsoletas

--- a/howto/curses.po
+++ b/howto/curses.po
@@ -209,7 +209,7 @@ msgstr ""
 "realiza llamando a la función :func:`~curses.initscr`, que determinará el "
 "tipo de terminal, enviará los códigos de configuración necesarios al "
 "terminal y creará varias estructuras de datos internas. Si tiene éxito, :"
-"func:`initscr` devuelve un objeto de ventana que representa la pantalla "
+"func:`initscr` retorna un objeto de ventana que representa la pantalla "
 "completa; Esto generalmente se llama ``stdscr`` después del nombre de la "
 "variable C correspondiente. ::"
 
@@ -243,7 +243,7 @@ msgid ""
 "const:`curses.KEY_LEFT`.  To get curses to do the job, you'll have to enable "
 "keypad mode. ::"
 msgstr ""
-"Los terminales generalmente devuelven teclas especiales, como las teclas del "
+"Los terminales generalmente retornan teclas especiales, como las teclas del "
 "cursor o las teclas de navegación, como Re Pág e Inicio, como una secuencia "
 "de escape multibyte. Si bien puede escribir su aplicación para esperar tales "
 "secuencias y procesarlas en consecuencia, curses pueden hacerlo por usted, "
@@ -335,7 +335,7 @@ msgid ""
 "newwin` function creates a new window of a given size, returning the new "
 "window object. ::"
 msgstr ""
-"El objeto ``stdscr`` devuelto por la función :func:`~curses.initscr` es un "
+"El objeto ``stdscr`` retornado por la función :func:`~curses.initscr` es un "
 "objeto de ventana que cubre toda la pantalla. Es posible que muchos "
 "programas solo necesiten esta única ventana, pero es posible que desee "
 "dividir la pantalla en ventanas más pequeñas para volver a dibujarlas o "
@@ -590,7 +590,7 @@ msgstr ""
 "de bytes se envía al terminal tal como está. Las cadenas se codifican en "
 "bytes utilizando el valor del atributo de la ventana :attr:`encoding`; Esto "
 "se establece de manera predeterminada en la codificación predeterminada del "
-"sistema que devuelve :func:`locale.getpreferredencoding`."
+"sistema que retorna :func:`locale.getpreferredencoding`."
 
 #: ../Doc/howto/curses.rst:309
 msgid ""
@@ -764,7 +764,7 @@ msgstr ""
 "poco después de llamar :func:`~curses.initscr`, para inicializar el conjunto "
 "de colores predeterminado (la función :func:`curses.wrapper` hace esto "
 "automáticamente). Una vez hecho esto, la función :func:`~curses.has_colors` "
-"devuelve TRUE si el terminal en uso realmente puede mostrar color. (Nota: "
+"retorna TRUE si el terminal en uso realmente puede mostrar color. (Nota: "
 "curses usa el ‘color’ de la ortografía estadounidense, en lugar del ‘color’ "
 "de la ortografía canadiense/británica. Si está acostumbrado a la ortografía "
 "británica, tendrá que resignarse a escribir mal por el bien de estas "
@@ -852,7 +852,7 @@ msgstr ""
 "Desafortunadamente, la consola de Linux no admite esto, por lo que no puedo "
 "probarlo y no puedo proporcionar ningún ejemplo. Puede verificar si su "
 "terminal puede hacer esto llamando a :func:`~curses.can_change_color`, que "
-"devuelve ``Verdadero`` si la capacidad está ahí. Si tiene la suerte de tener "
+"retorna ``Verdadero`` si la capacidad está ahí. Si tiene la suerte de tener "
 "un terminal tan talentoso, consulte las páginas de manual de su sistema para "
 "obtener más información."
 
@@ -896,8 +896,8 @@ msgid ""
 "name such as ``KEY_UP`` or ``^G``."
 msgstr ""
 ":meth:`~curses.window.getkey` hace lo mismo pero convierte el entero en una "
-"cadena. Los caracteres individuales se devuelven como cadenas de 1 carácter, "
-"y las teclas especiales como las teclas de función devuelven cadenas más "
+"cadena. Los caracteres individuales se retornan como cadenas de 1 carácter, "
+"y las teclas especiales como las teclas de función retornan cadenas más "
 "largas que contienen un nombre de tecla como ``KEY_UP`` o ``^ G``."
 
 #: ../Doc/howto/curses.rst:450
@@ -914,8 +914,8 @@ msgstr ""
 "Es posible no esperar al usuario utilizando el método de ventana :meth:`~ "
 "curses.window.nodelay`. Después de ``nodelay(True)``, :meth:`getch` y :meth:"
 "`getkey` para que la ventana no se bloquee. Para indicar que no hay ninguna "
-"entrada lista, :meth:`getch` devuelve ``curses.ERR`` (un valor de -1) y :"
-"meth:`getkey` genera una excepción. También hay una función :func:`~curses."
+"entrada lista, :meth:`getch` retorna ``curses.ERR`` (un valor de -1) y :meth:"
+"`getkey` genera una excepción. También hay una función :func:`~curses."
 "halfdelay`, que se puede usar para (en efecto) establecer un temporizador en "
 "cada :meth:`getch`; Si no hay entrada disponible dentro de un retraso "
 "especificado (medido en décimas de segundo), curses generan una excepción."
@@ -929,10 +929,10 @@ msgid ""
 "`curses.KEY_HOME`, or :const:`curses.KEY_LEFT`.  The main loop of your "
 "program may look something like this::"
 msgstr ""
-"El método :meth:`getch` devuelve un entero; si está entre 0 y 255, "
-"representa el código ASCII de la tecla presionada. Los valores superiores a "
-"255 son teclas especiales como Re Pág, Inicio o las teclas del cursor. Puede "
-"comparar el valor devuelto a constantes como :const:`curses.KEY_PPAGE`, :"
+"El método :meth:`getch` retorna un entero; si está entre 0 y 255, representa "
+"el código ASCII de la tecla presionada. Los valores superiores a 255 son "
+"teclas especiales como Re Pág, Inicio o las teclas del cursor. Puede "
+"comparar el valor retornado a constantes como :const:`curses.KEY_PPAGE`, :"
 "const:`curses.KEY_HOME`, o :const:`curses.KEY_LEFT`. El bucle principal de "
 "su programa puede verse así::"
 
@@ -949,8 +949,8 @@ msgstr ""
 "ASCII que toman argumentos de cadena de entero o de 1 carácter; Estos pueden "
 "ser útiles para escribir pruebas más legibles para dichos bucles. También "
 "proporciona funciones de conversión que toman argumentos enteros o de cadena "
-"de 1 carácter y devuelven el mismo tipo. Por ejemplo, :func:`curses.ascii."
-"ctrl` devuelve el carácter de control correspondiente a su argumento."
+"de 1 carácter y retornen el mismo tipo. Por ejemplo, :func:`curses.ascii."
+"ctrl` retorna el carácter de control correspondiente a su argumento."
 
 #: ../Doc/howto/curses.rst:483
 msgid ""
