--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -57,7 +57,7 @@ msgid ""
 "logger calls to the child will pass up to the parent.  Here is a main "
 "module::"
 msgstr ""
-"Múltiples llamadas a ``logging.getLogger('someLogger')`` devuelven una "
+"Múltiples llamadas a ``logging.getLogger('someLogger')`` retornan una "
 "referencia al mismo objeto logger. Esto es cierto no solo dentro del mismo "
 "módulo, sino también en todos los módulos siempre que estén ejecutándose en "
 "el mismo proceso del intérprete de Python. Es válido para las referencias al "
@@ -1720,7 +1720,7 @@ msgstr ""
 "Filter.filter` sobreescrito. Para hacer esto, especifique la clave ``()`` en "
 "el diccionario de configuración para el filtro, especificando un invocable "
 "que se usará para crear el filtro (una clase es la más obvia, pero puede "
-"proporcionar cualquier invocable que devuelva una instancia :class:`~logging."
+"proporcionar cualquier invocable que retorne una instancia :class:`~logging."
 "Filter`). Aquí hay un ejemplo completo:"
 
 #: ../Doc/howto/logging-cookbook.rst:2136
