--- a/howto/pyporting.po
+++ b/howto/pyporting.po
@@ -667,9 +667,9 @@ msgstr ""
 "Por último, la indexación de datos binarios requiere un control cuidadoso "
 "(el corte **no** requiere ningún control especial). En Python 2, ``b'123'[1] "
 "== b'2'`` mientras que en Python 3 ``b'123'[1] == 50``. Dado que los datos "
-"binarios son simplemente una colección de números binarios, Python 3 "
-"devuelve el valor entero para el byte en el que indexa. Pero en Python 2, ya "
-"que ``bytes == str``, la indexación devuelve un segmento de bytes de un solo "
+"binarios son simplemente una colección de números binarios, Python 3 retorna "
+"el valor entero para el byte en el que indexa. Pero en Python 2, ya que "
+"``bytes == str``, la indexación retorna un segmento de bytes de un solo "
 "elemento. El proyecto six_ tiene una función denominada ``six.indexbytes()`` "
 "que devolverá un entero como en Python 3: ``six.indexbytes(b'123', 1)``."
 
@@ -921,7 +921,7 @@ msgstr ""
 "de Python 3 para desencadenar una excepción cuando se comparan bytes con "
 "cadenas o bytes con un int (este último está disponible a partir de Python "
 "3.5). De forma predeterminada, las comparaciones de tipos diferentes "
-"simplemente devuelven ``False``, pero si cometió un error en la separación "
+"simplemente retornan ``False``, pero si cometió un error en la separación "
 "del control de datos de texto/binario o la indexación en bytes, no "
 "encontraría fácilmente el error. Esta marca generará una excepción cuando se "
 "produzcan este tipo de comparaciones, lo que hace que el error sea mucho más "
