--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -119,7 +119,7 @@ msgid ""
 "each input record."
 msgstr ""
 "El valor del parámetro *key* debe ser una función (u otra invocable) que "
-"tome un solo argumento y devuelva una clave para usar con fines de "
+"tome un solo argumento y retorne una clave para usar con fines de "
 "clasificación. Esta técnica es rápida porque la función de la tecla se llama "
 "exactamente una vez para cada registro de entrada."
 
