--- a/howto/unicode.po
+++ b/howto/unicode.po
@@ -764,7 +764,7 @@ msgid ""
 "Unicode Standard for a discussion and an example.)"
 msgstr ""
 "Esto imprimirá ``Verdadero``. (¿Por qué se invoca dos veces :func:`NFD`? "
-"Debido a que hay algunos caracteres que hacen que :meth:`casefold` devuelva "
+"Debido a que hay algunos caracteres que hacen que :meth:`casefold` retorne "
 "una cadena no normalizada, por lo que el resultado debe normalizarse "
 "nuevamente. Consulte la sección 3.13 del Estándar Unicode para una discusión "
 "y un ejemplo.)"
@@ -1071,7 +1071,7 @@ msgid ""
 "assuming the default :term:`filesystem encoding <filesystem encoding and "
 "error handler>` is UTF-8, running the following program::"
 msgstr ""
-"La función :func:`os.listdir` devuelve nombres de archivo, lo que plantea un "
+"La función :func:`os.listdir` retorna nombres de archivo, lo que plantea un "
 "problema: ¿debería devolver la versión Unicode de los nombres de archivo o "
 "debería devolver bytes que contienen las versiones codificadas? :func:`os."
 "listdir` puede hacer ambas cosas, dependiendo de si proporcionó la ruta del "
