--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -163,7 +163,7 @@ msgstr ""
 "servidores envían respuestas. urllib.request refleja esto con un objeto "
 "``Request`` que representa la petición HTTP que estás haciendo. En su forma "
 "más simple se crea un objeto Request que especifica la URL que se quiere "
-"obtener. Llamar a ``urlopen`` con este objeto Request devuelve un objeto "
+"obtener. Llamar a ``urlopen`` con este objeto Request retorna un objeto "
 "respuesta para la URL solicitada. Esta respuesta es un objeto tipo archivo, "
 "lo que significa que puedes por ejemplo llamar a ``.read()`` en la "
 "respuesta::"
@@ -432,9 +432,9 @@ msgid ""
 msgstr ""
 "Cuando se genera un error, el servidor responde retornando un código de "
 "error HTTP *y* una página de error. Puedes usar la instancia :exc:"
-"`HTTPError` como respuesta en la página devuelta. Esto significa que además "
+"`HTTPError` como respuesta en la página retornada. Esto significa que además "
 "del atributo de código, también tiene los métodos read, geturl, e info, tal "
-"y como son devueltos por el módulo ``urllib.response``::"
+"y como son retornados por el módulo ``urllib.response``::"
 
 #: ../Doc/howto/urllib2.rst:346
 msgid "Wrapping it Up"
@@ -485,7 +485,7 @@ msgid ""
 "redirect. The URL of the page fetched may not be the same as the URL "
 "requested."
 msgstr ""
-"**geturl** - devuelve la verdadera URL de la página obtenida. Esto es útil "
+"**geturl** - retorna la verdadera URL de la página obtenida. Esto es útil "
 "porque ``urlopen`` (o el objeto de apertura utilizado) puede haber seguido "
 "una redirección. El URL de la página obtenida puede no ser el mismo que el "
 "URL solicitado."
@@ -496,7 +496,7 @@ msgid ""
 "fetched, particularly the headers sent by the server. It is currently an :"
 "class:`http.client.HTTPMessage` instance."
 msgstr ""
-"**info** - devuelve un objeto parecido a un diccionario que describe la "
+"**info** - retorna un objeto parecido a un diccionario que describe la "
 "página consultada, particularmente los encabezados enviados por el servidor. "
 "Actualmente es una instancia :class:`http.client.HTTPMessage`."
 
