--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -1197,7 +1197,7 @@ msgid ""
 "result, the function becomes identically accessible from either an object or "
 "a class."
 msgstr ""
-"Los métodos estáticos devuelven la función subyacente sin cambios. Llamar a "
+"Los métodos estáticos retornan la función subyacente sin cambios. Llamar a "
 "``c.f`` o ``C.f`` es equivalente a una búsqueda directa en ``object."
 "__getattribute__(c, \"f\")`` o en ``object.__getattribute__(C, \"f\")``. "
 "Como resultado, la función se vuelve idénticamente accesible desde un objeto "
@@ -1237,7 +1237,7 @@ msgid ""
 "Since static methods return the underlying function with no changes, the "
 "example calls are unexciting:"
 msgstr ""
-"Dado que los métodos estáticos devuelven la función subyacente sin cambios, "
+"Dado que los métodos estáticos retornan la función subyacente sin cambios, "
 "las llamadas de ejemplo carecen de interés::"
 
 #: ../Doc/howto/descriptor.rst:1253
@@ -1419,176 +1419,3 @@ msgstr ""
 #: ../Doc/howto/descriptor.rst:1629
 msgid "Misspelled or unassigned attributes will raise an exception:"
 msgstr "Atributos mal deletreados o no asignados lazarán una excepción:"
-
-#~ msgid ""
-#~ "Defines descriptors, summarizes the protocol, and shows how descriptors "
-#~ "are called.  Examines a custom descriptor and several built-in Python "
-#~ "descriptors including functions, properties, static methods, and class "
-#~ "methods.  Shows how each works by giving a pure Python equivalent and a "
-#~ "sample application."
-#~ msgstr ""
-#~ "Definir los descriptores, resumir el protocolo y mostrar como los "
-#~ "descriptores son llamados. Estudiar un descriptor personalizado y varios "
-#~ "descriptores de Python incorporados, incluidas funciones, propiedades, "
-#~ "métodos estáticos y métodos de clase. Mostrar como funciona cada uno "
-#~ "proporcionando un equivalente puro de Python y un ejemplo de aplicación."
-
-#~ msgid ""
-#~ "In general, a descriptor is an object attribute with \"binding behavior"
-#~ "\", one whose attribute access has been overridden by methods in the "
-#~ "descriptor protocol.  Those methods are :meth:`__get__`, :meth:`__set__`, "
-#~ "and :meth:`__delete__`.  If any of those methods are defined for an "
-#~ "object, it is said to be a descriptor."
-#~ msgstr ""
-#~ "En general, un descriptor es un atributo de objeto con \"comportamiento "
-#~ "vinculante\", dónde el acceso al atributo ha sido reemplazado por métodos "
-#~ "en el protocolo del descriptor. Esos métodos son :meth:`__get__`, :meth:"
-#~ "`__set__` y :meth:`__delete__`. Si alguno de esos métodos está definido "
-#~ "para un objeto, se dice que es un descriptor."
-
-#~ msgid ""
-#~ "Descriptors are a powerful, general purpose protocol.  They are the "
-#~ "mechanism behind properties, methods, static methods, class methods, and :"
-#~ "func:`super()`. They are used throughout Python itself to implement the "
-#~ "new style classes introduced in version 2.2.  Descriptors simplify the "
-#~ "underlying C-code and offer a flexible set of new tools for everyday "
-#~ "Python programs."
-#~ msgstr ""
-#~ "Los descriptores son un potente protocolo de propósito general. Son el "
-#~ "mecanismo detrás de las propiedades, métodos, métodos estáticos, métodos "
-#~ "de clase y :func:`super()`. Se utilizan en todo Python para implementar "
-#~ "las clases de nuevo estilo introducidas en la versión 2.2. Los "
-#~ "descriptores simplifican el código C subyacente y ofrecen un conjunto "
-#~ "flexible de nuevas herramientas para los programas de Python cotidianos."
-
-#~ msgid "Invoking Descriptors"
-#~ msgstr "Invocar descriptores"
-
-#~ msgid ""
-#~ "Alternatively, it is more common for a descriptor to be invoked "
-#~ "automatically upon attribute access.  For example, ``obj.d`` looks up "
-#~ "``d`` in the dictionary of ``obj``.  If ``d`` defines the method :meth:"
-#~ "`__get__`, then ``d.__get__(obj)`` is invoked according to the precedence "
-#~ "rules listed below."
-#~ msgstr ""
-#~ "Alternativamente, es más común que un descriptor se invoque "
-#~ "automáticamente al acceder a un atributo. Por ejemplo, ``obj.d`` busca "
-#~ "``d`` en el diccionario de ``obj``. Si ``d`` define el método :meth:"
-#~ "`__get__`, entonces se invoca ``d.__get__(obj)`` de acuerdo con las "
-#~ "reglas de precedencia que se enumeran a continuación."
-
-#~ msgid ""
-#~ "For objects, the machinery is in :meth:`object.__getattribute__` which "
-#~ "transforms ``b.x`` into ``type(b).__dict__['x'].__get__(b, type(b))``.  "
-#~ "The implementation works through a precedence chain that gives data "
-#~ "descriptors priority over instance variables, instance variables priority "
-#~ "over non-data descriptors, and assigns lowest priority to :meth:"
-#~ "`__getattr__` if provided. The full C implementation can be found in :c:"
-#~ "func:`PyObject_GenericGetAttr()` in :source:`Objects/object.c`."
-#~ msgstr ""
-#~ "Para los objetos, el mecanismo se encuentra en :meth:`object."
-#~ "__getattribute__` que transforma ``b.x`` en ``type(b).__dict__['x']."
-#~ "__get__(b, type(b))``. La implementación funciona a través de una cadena "
-#~ "de precedencia que da a los descriptores de datos prioridad sobre las "
-#~ "variables de instancia, a las variables de instancia prioridad sobre los "
-#~ "descriptores de no-datos y asigna la prioridad más baja a :meth:"
-#~ "`__getattr__` si se proporciona. La implementación completa en C se puede "
-#~ "encontrar en :c:func:`PyObject_GenericGetAttr()` en :source:`Objects/"
-#~ "object.c`."
-
-#~ msgid ""
-#~ "For classes, the machinery is in :meth:`type.__getattribute__` which "
-#~ "transforms ``B.x`` into ``B.__dict__['x'].__get__(None, B)``.  In pure "
-#~ "Python, it looks like::"
-#~ msgstr ""
-#~ "Para clases, el mecanismo se define en :meth:`type.__getattribute__` que "
-#~ "transforma ``B.x`` en ``B.__dict__['x'].__get__(None, B)``. En Python "
-#~ "puro, quedaría así::"
-
-#~ msgid ""
-#~ "The object returned by ``super()`` also has a custom :meth:"
-#~ "`__getattribute__` method for invoking descriptors.  The attribute lookup "
-#~ "``super(B, obj).m`` searches ``obj.__class__.__mro__`` for the base class "
-#~ "``A`` immediately following ``B`` and then returns ``A.__dict__['m']."
-#~ "__get__(obj, B)``.  If not a descriptor, ``m`` is returned unchanged.  If "
-#~ "not in the dictionary, ``m`` reverts to a search using :meth:`object."
-#~ "__getattribute__`."
-#~ msgstr ""
-#~ "El objeto devuelto por ``super()`` también tiene un método personalizado :"
-#~ "meth:`__getattribute__` para poder invocar descriptores. La búsqueda de "
-#~ "atributo ``super(B, obj).m`` busca ``obj.__class__.__mro__`` para la "
-#~ "clase base ``A`` inmediatamente después de ``B`` y luego devuelve ``A."
-#~ "__dict__['m'].__get__(obj, B)``. Si no es un descriptor, se devuelve "
-#~ "``m`` sin cambios. Si no está en el diccionario, ``m`` revierte a una "
-#~ "búsqueda usando :meth:`object.__getattribute__`."
-
-#~ msgid ""
-#~ "The details above show that the mechanism for descriptors is embedded in "
-#~ "the :meth:`__getattribute__()` methods for :class:`object`, :class:"
-#~ "`type`, and :func:`super`.  Classes inherit this machinery when they "
-#~ "derive from :class:`object` or if they have a meta-class providing "
-#~ "similar functionality. Likewise, classes can turn-off descriptor "
-#~ "invocation by overriding :meth:`__getattribute__()`."
-#~ msgstr ""
-#~ "Los detalles anteriores muestran que el mecanismo para los descriptores "
-#~ "está incrustado en los métodos :meth:`__getattribute__()`  para :class:"
-#~ "`object`, :class:`type` y :func:`super`. Las clases heredan este "
-#~ "mecanismo cuando derivan de :class:`object` o mediante una metaclase que "
-#~ "proporcione funcionalidades similares. Del mismo modo, las clases pueden "
-#~ "desactivar la invocación del descriptor redefiniendo :meth:"
-#~ "`__getattribute__()`."
-
-#~ msgid ""
-#~ "The following code creates a class whose objects are data descriptors "
-#~ "which print a message for each get or set.  Overriding :meth:"
-#~ "`__getattribute__` is alternate approach that could do this for every "
-#~ "attribute.  However, this descriptor is useful for monitoring just a few "
-#~ "chosen attributes::"
-#~ msgstr ""
-#~ "El siguiente código crea una clase cuyos objetos son descriptores de "
-#~ "datos que imprimen un mensaje para cada lectura o escritura. Redefinir :"
-#~ "meth:`__getattribute__` es un enfoque alternativo que podría hacer esto "
-#~ "para cada atributo. Sin embargo, este descriptor es útil para monitorizar "
-#~ "solo algunos atributos elegidos::"
-
-#~ msgid ""
-#~ "The protocol is simple and offers exciting possibilities.  Several use "
-#~ "cases are so common that they have been packaged into individual function "
-#~ "calls. Properties, bound methods, static methods, and class methods are "
-#~ "all based on the descriptor protocol."
-#~ msgstr ""
-#~ "El protocolo es simple y ofrece interesantes posibilidades. Varios casos "
-#~ "de uso son tan comunes que se han empaquetado en llamadas a funciones "
-#~ "individuales. Las propiedades, los métodos vinculados, los métodos "
-#~ "estáticos y los métodos de clase se basan en el protocolo descriptor."
-
-#~ msgid ""
-#~ "Class dictionaries store methods as functions.  In a class definition, "
-#~ "methods are written using :keyword:`def` or :keyword:`lambda`, the usual "
-#~ "tools for creating functions.  Methods only differ from regular functions "
-#~ "in that the first argument is reserved for the object instance.  By "
-#~ "Python convention, the instance reference is called *self* but may be "
-#~ "called *this* or any other variable name."
-#~ msgstr ""
-#~ "Los diccionarios de clase almacenan los métodos como funciones. En una "
-#~ "definición de clase, los métodos se escriben usando :keyword:`def` o :"
-#~ "keyword:`lambda`, las herramientas habituales para crear funciones. Los "
-#~ "métodos solo difieren de las funciones regulares en que el primer "
-#~ "argumento está reservado para la instancia del objeto. Por convención en "
-#~ "Python, la referencia de instancia se llama *self* pero puede llamarse "
-#~ "*this* o cualquier otro nombre de variable."
-
-#~ msgid ""
-#~ "To support method calls, functions include the :meth:`__get__` method for "
-#~ "binding methods during attribute access.  This means that all functions "
-#~ "are non-data descriptors which return bound methods when they are invoked "
-#~ "from an object.  In pure Python, it works like this::"
-#~ msgstr ""
-#~ "Para admitir llamadas a métodos, las funciones incluyen el método :meth:"
-#~ "`__get__` para vincular métodos durante el acceso a atributos. Esto "
-#~ "significa que todas las funciones son descriptores de no-datos que "
-#~ "devuelven métodos enlazados cuando se invocan desde un objeto. En Python "
-#~ "puro, funciona así::"
-
-#~ msgid "Static Methods and Class Methods"
-#~ msgstr "Métodos estáticos y métodos de clase"
