--- a/howto/functional.po
+++ b/howto/functional.po
@@ -772,7 +772,7 @@ msgid ""
 msgstr ""
 "Los generadores son una clase especial de funciones que simplifican la tarea "
 "de escribir iteradores. Las funciones regulares calculan un valor y lo "
-"devuelven, pero los generadores retornan un iterador que retorna un flujo de "
+"retornan, pero los generadores retornan un iterador que retorna un flujo de "
 "valores."
 
 #: ../Doc/howto/functional.rst:436
@@ -1963,20 +1963,3 @@ msgid ""
 msgstr ""
 ":pep:`342`: \"Corrutinas a través de generadores mejorados\" describe las "
 "características del nuevo generador en Python 2.5."
-
-#~ msgid ""
-#~ "Some languages are very strict about purity and don't even have "
-#~ "assignment statements such as ``a=3`` or ``c = a + b``, but it's "
-#~ "difficult to avoid all side effects.  Printing to the screen or writing "
-#~ "to a disk file are side effects, for example.  For example, in Python a "
-#~ "call to the :func:`print` or :func:`time.sleep` function both return no "
-#~ "useful value; they're only called for their side effects of sending some "
-#~ "text to the screen or pausing execution for a second."
-#~ msgstr ""
-#~ "Algunos lenguajes son muy estrictos sobre la pureza y ni siquiera tienen "
-#~ "sentencias de asignación como ``a=3`` o ``c = a + b``, pero es difícil "
-#~ "evitar todos los efectos secundarios. Imprimir en la pantalla o escribir "
-#~ "en un archivo en disco son efectos secundarios. Por ejemplo, en Python "
-#~ "una llamada a la función :func:`print` o :func:`time.sleep` retorna un "
-#~ "valor inútil; solo se llaman por sus efectos secundarios de enviar algún "
-#~ "texto a la pantalla o pausar la ejecución por un segundo."
