--- a/howto/instrumentation.po
+++ b/howto/instrumentation.po
@@ -267,7 +267,7 @@ msgid ""
 "$arg1``, ``$arg2``, ``$arg3``:"
 msgstr ""
 "El nombre del archivo, el nombre de la función y el número de línea se "
-"devuelven al script de rastreo como argumentos posicionales, a los que se "
+"retornan al script de rastreo como argumentos posicionales, a los que se "
 "debe acceder usando ``$arg1``, ``$arg2``, ``$arg3``:"
 
 #: ../Doc/howto/instrumentation.rst:286
