--- a/howto/instrumentation.po
+++ b/howto/instrumentation.po
@@ -246,7 +246,8 @@ msgstr "en su lugar debería leer:"
 
 #: ../Doc/howto/instrumentation.rst:271
 msgid "(assuming a :ref:`debug build <debug-build>` of CPython 3.6)"
-msgstr "(asumiendo una :ref:`compilación de depuración <debug-build>` de CPython 3.6)"
+msgstr ""
+"(asumiendo una :ref:`compilación de depuración <debug-build>` de CPython 3.6)"
 
 #: ../Doc/howto/instrumentation.rst:275
 msgid "Available static markers"
