--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -121,10 +121,10 @@ msgid ""
 "of sockets with INET makes talking to arbitrary machines around the world "
 "unbelievably easy (at least compared to other schemes)."
 msgstr ""
-"Fueron inventados en Berkeley como parte del sabor BSD de Unix. Se propagaron "
-"como la pólvora con Internet. Con razón: la combinación de sockets con INET "
-"hace que hablar con máquinas arbitrarias de todo el mundo sea increíblemente "
-"fácil (al menos en comparación con otros esquemas)."
+"Fueron inventados en Berkeley como parte del sabor BSD de Unix. Se "
+"propagaron como la pólvora con Internet. Con razón: la combinación de "
+"sockets con INET hace que hablar con máquinas arbitrarias de todo el mundo "
+"sea increíblemente fácil (al menos en comparación con otros esquemas)."
 
 #: ../Doc/howto/sockets.rst:54
 msgid "Creating a Socket"
