--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-04 20:37+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/howto/sockets.rst:5
@@ -115,18 +115,16 @@ msgstr ""
 "competidores."
 
 #: ../Doc/howto/sockets.rst:47
-#, fuzzy
 msgid ""
 "They were invented in Berkeley as part of the BSD flavor of Unix. They "
 "spread like wildfire with the internet. With good reason --- the combination "
 "of sockets with INET makes talking to arbitrary machines around the world "
 "unbelievably easy (at least compared to other schemes)."
 msgstr ""
-"Fueron inventados en Berkeley como parte de la derivación de *Unix* BSD y se "
-"expandió como la pólvora en internet. Con buena razón --- la combinación de "
-"los sockets con INET hace que hablar con computadoras arbitrarias alrededor "
-"del mundo sea increíblemente sencillo (al menos comparado con otros "
-"esquemas)."
+"Fueron inventados en Berkeley como parte del sabor BSD de Unix. Se "
+"propagaron como la pólvora con Internet. Con razón: la combinación de "
+"sockets con INET hace que hablar con máquinas arbitrarias de todo el mundo "
+"sea increíblemente fácil (al menos en comparación con otros esquemas)."
 
 #: ../Doc/howto/sockets.rst:54
 msgid "Creating a Socket"
