--- a/tutorial/interpreter.po
+++ b/tutorial/interpreter.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 19:45+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/tutorial/interpreter.rst:5
@@ -30,7 +30,6 @@ msgid "Invoking the Interpreter"
 msgstr "Invocando al intérprete"
 
 #: ../Doc/tutorial/interpreter.rst:13
-#, fuzzy
 msgid ""
 "The Python interpreter is usually installed as :file:`/usr/local/bin/"
 "python3.10` on those machines where it is available; putting :file:`/usr/"
@@ -55,7 +54,6 @@ msgstr ""
 "(Por ejemplo, :file:`/usr/local/python` es una alternativa popular)."
 
 #: ../Doc/tutorial/interpreter.rst:26
-#, fuzzy
 msgid ""
 "On Windows machines where you have installed Python from the :ref:`Microsoft "
 "Store <windows-store>`, the :file:`python3.10` command will be available. If "
@@ -63,11 +61,11 @@ msgid ""
 "file:`py` command. See :ref:`setting-envvars` for other ways to launch "
 "Python."
 msgstr ""
-"En máquinas Windows en las que haya instalado Python desde :ref:`Microsoft "
-"Store <windows-store>`, el comando :file:`python3.10` estará disponible. Si "
-"tiene instalado :ref:`py.exe launcher <launcher>`, puede usar el comando :"
-"file:`py`. Consulte :ref:`setting-envvars` para conocer otras formas de "
-"iniciar Python."
+"En máquinas con Windows en las que haya instalado Python desde :ref:"
+"`Microsoft Store <windows-store>`, el comando :file:`python3.10` estará "
+"disponible. Si tiene el :ref:`lanzador py.exe <launcher>` instalado, puede "
+"usar el comando :file:`py`. Consulte :ref:`setting-envvars` para conocer "
+"otras formas de iniciar Python."
 
 #: ../Doc/tutorial/interpreter.rst:31
 msgid ""
