Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/reference/import.po
+++ b/reference/import.po
@@ -662,7 +662,7 @@ msgid ""
 "system now raises :exc:`ImportWarning`."
 msgstr ""
 "El uso de :meth:`~importlib.abc.MetaPathFinder.find_module` por parte del "
-"sistema de importación ahora genera :exc:`ImportWarning`."
+"sistema de importación ahora lanza :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:338
 msgid "Loading"
@@ -918,7 +918,7 @@ msgstr ""
 
 #: ../Doc/reference/import.rst:477
 msgid "Use of ``load_module()`` will raise :exc:`ImportWarning`."
-msgstr "El uso de ``load_module()`` aumentará :exc:`ImportWarning`."
+msgstr "El uso de ``load_module()`` lanzará :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:481
 msgid "Submodules"
@@ -1809,7 +1809,7 @@ msgid ""
 msgstr ""
 "Las llamadas a :meth:`~importlib.abc.PathEntryFinder.find_module` y :meth:"
 "`~importlib.abc.PathEntryFinder.find_loader` por parte del sistema de "
-"importación generarán :exc:`ImportWarning`."
+"importación lanzarán :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:913
 msgid "Replacing the standard import system"
