Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/glossary.po
+++ b/glossary.po
@@ -1121,7 +1121,7 @@ msgstr ""
 "semántica que se convertirá en estándar en una versión futura de Python. El "
 "módulo :mod:`__future__` documenta los posibles valores de *feature*. Al "
 "importar este módulo y evaluar sus variables, puede ver cuándo se agregó por "
-"primera vez una nueva característica al idioma y cuándo se convertirá (o se "
+"primera vez una nueva característica al lenguaje y cuándo se convertirá (o se "
 "convirtió en) en la predeterminada:"
 
 #: ../Doc/glossary.rst:475
@@ -2616,7 +2616,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1119
 msgid "strong reference"
-msgstr "fuerte referencia"
+msgstr "referencia fuerte"
 
 #: ../Doc/glossary.rst:1121
 msgid ""
@@ -2624,7 +2624,7 @@ msgid ""
 "increments the object's reference count when it is created and decrements "
 "the object's reference count when it is deleted."
 msgstr ""
-"En la API C de Python, una referencia sólida es una referencia a un objeto "
+"En la API C de Python, una referencia fuerte es una referencia a un objeto "
 "que incrementa el recuento de referencias del objeto cuando se crea y "
 "disminuye el recuento de referencias del objeto cuando se elimina."
 
@@ -2635,8 +2635,8 @@ msgid ""
 "strong reference before exiting the scope of the strong reference, to avoid "
 "leaking one reference."
 msgstr ""
-"La función :c:func:`Py_NewRef` se puede utilizar para crear una fuerte "
-"referencia a un objeto. Por lo general, se debe llamar a la función :c:func:"
+"La función :c:func:`Py_NewRef` se puede utilizar para crear una referencia "
+"fuerte a un objeto. Por lo general, se debe llamar a la función :c:func:"
 "`Py_DECREF` en la referencia fuerte antes de salir del alcance de la "
 "referencia fuerte, para evitar filtrar una referencia."
 
