deshacer seccion borrada

--- a/glossary.po
+++ b/glossary.po
@@ -1005,7 +1005,11 @@ msgstr ""
 "member:`~PyConfig.filesystem_encoding` y :c:member:`~PyConfig."
 "filesystem_errors` de :c:type:`PyConfig`."
 
-#: ../Doc/glossary.rst:420 ../Doc/glossary.rst:421
+#: ../Doc/glossary.rst:420
+msgid "See also the :term:`locale encoding`"
+msgstr "Vea también :term:`locale encoding`"
+
+#: ../Doc/glossary.rst:421
 msgid "finder"
 msgstr "buscador"
 
@@ -1121,8 +1125,8 @@ msgstr ""
 "semántica que se convertirá en estándar en una versión futura de Python. El "
 "módulo :mod:`__future__` documenta los posibles valores de *feature*. Al "
 "importar este módulo y evaluar sus variables, puede ver cuándo se agregó por "
-"primera vez una nueva característica al lenguaje y cuándo se convertirá (o se "
-"convirtió en) en la predeterminada:"
+"primera vez una nueva característica al lenguaje y cuándo se convertirá (o "
+"se convirtió en) en la predeterminada:"
 
 #: ../Doc/glossary.rst:475
 msgid "garbage collection"
