finalizando reference/import (#1685)
* finalizando reference/import
* Apply suggestions from code review

Co-authored-by: rtobar <rtobar@icrar.org>

--- a/reference/import.po
+++ b/reference/import.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 19:27+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/reference/import.rst:6
@@ -661,6 +661,8 @@ msgid ""
 "Use of :meth:`~importlib.abc.MetaPathFinder.find_module` by the import "
 "system now raises :exc:`ImportWarning`."
 msgstr ""
+"El uso de :meth:`~importlib.abc.MetaPathFinder.find_module` por parte del "
+"sistema de importación ahora lanza :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:338
 msgid "Loading"
@@ -916,7 +918,7 @@ msgstr ""
 
 #: ../Doc/reference/import.rst:477
 msgid "Use of ``load_module()`` will raise :exc:`ImportWarning`."
-msgstr ""
+msgstr "El uso de ``load_module()`` lanzará :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:481
 msgid "Submodules"
@@ -1324,6 +1326,10 @@ msgid ""
 "``__file__``. Use of :meth:`~importlib.abc.Loader.module_repr` is slated to "
 "stop in Python 3.12."
 msgstr ""
+"La llamada a :meth:`~importlib.abc.Loader.module_repr` ahora ocurre después "
+"de intentar usar el atributo ``__spec__`` de un módulo, pero antes de "
+"recurrir a ``__file__``. Está previsto que el uso de :meth:`~importlib.abc."
+"Loader.module_repr` se detenga en Python 3.12."
 
 #: ../Doc/reference/import.rst:695
 msgid "Cached bytecode invalidation"
@@ -1801,6 +1807,9 @@ msgid ""
 "`~importlib.abc.PathEntryFinder.find_loader` by the import system will "
 "raise :exc:`ImportWarning`."
 msgstr ""
+"Las llamadas a :meth:`~importlib.abc.PathEntryFinder.find_module` y :meth:"
+"`~importlib.abc.PathEntryFinder.find_loader` por parte del sistema de "
+"importación lanzarán :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:913
 msgid "Replacing the standard import system"
