Arreglado titulo whatsnew 3.10

--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -3051,7 +3051,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.10.rst:1776 ../Doc/whatsnew/3.10.rst:2200
 msgid "Removed"
-msgstr "Remoto"
+msgstr "Eliminado"
 
 #: ../Doc/whatsnew/3.10.rst:1778
 msgid ""
