Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/glossary.po
+++ b/glossary.po
@@ -418,11 +418,11 @@ msgid ""
 "func:`Py_NewRef` function can be used to create a new :term:`strong "
 "reference`."
 msgstr ""
-"Se recomienda llamar a :c:func:`Py_INCREF` en el :term:`borrowed reference` "
-"para convertirlo en un :term:`strong reference` in situ, excepto cuando el "
+"Se recomienda llamar a :c:func:`Py_INCREF` en la :term:`referencia prestada <borrowed reference>` "
+"para convertirla en una :term:`referencia fuerte <strong reference>` in situ, excepto cuando el "
 "objeto no se puede destruir antes del último uso de la referencia prestada. "
-"La función :c:func:`Py_NewRef` se puede utilizar para crear un nuevo :term:"
-"`strong reference`."
+"La función :c:func:`Py_NewRef` se puede utilizar para crear una nueva :term:"
+"`referencia fuerte <strong reference>`."
 
 #: ../Doc/glossary.rst:174
 msgid "bytes-like object"
@@ -981,7 +981,7 @@ msgstr ""
 "La codificación del sistema de archivos debe garantizar la decodificación "
 "exitosa de todos los bytes por debajo de 128. Si la codificación del sistema "
 "de archivos no proporciona esta garantía, las funciones de API pueden "
-"generar :exc:`UnicodeError`."
+"lanzar :exc:`UnicodeError`."
 
 #: ../Doc/glossary.rst:411
 msgid ""
@@ -1000,7 +1000,7 @@ msgid ""
 "filesystem_encoding` and :c:member:`~PyConfig.filesystem_errors` members of :"
 "c:type:`PyConfig`."
 msgstr ""
-"Los :term:`filesystem encoding and error handler` se configuran al inicio de "
+"La :term:`codificación del sistema de archivos y el manejador de errores <filesystem encoding and error handler>` se configuran al inicio de "
 "Python mediante la función :c:func:`PyConfig_Read`: consulte los miembros :c:"
 "member:`~PyConfig.filesystem_encoding` y :c:member:`~PyConfig."
 "filesystem_errors` de :c:type:`PyConfig`."
@@ -1126,7 +1126,7 @@ msgstr ""
 "módulo :mod:`__future__` documenta los posibles valores de *feature*. Al "
 "importar este módulo y evaluar sus variables, puede ver cuándo se agregó por "
 "primera vez una nueva característica al lenguaje y cuándo se convertirá (o "
-"se convirtió en) en la predeterminada:"
+"se convirtió) en la predeterminada:"
 
 #: ../Doc/glossary.rst:475
 msgid "garbage collection"
@@ -1697,7 +1697,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:711
 msgid "locale encoding"
-msgstr "codificación local"
+msgstr "codificación de la configuración regional"
 
 #: ../Doc/glossary.rst:713
 msgid ""
