--- a/license.po
+++ b/license.po
@@ -450,9 +450,9 @@ msgid ""
 msgstr ""
 "Los módulos :mod:`hashlib`, :mod:`posix`, :mod:`ssl`, :mod:`crypt` utilizan "
 "la biblioteca OpenSSL para un rendimiento adicional si el sistema operativo "
-"los pone a disposición. Además, los instaladores de Windows y macOS para "
+"la pone a disposición. Además, los instaladores de Windows y macOS para "
 "Python pueden incluir una copia de las bibliotecas de OpenSSL, por lo que "
-"incluimos una copia de la licencia de OpenSSL aquí:"
+"incluimos una copia de la licencia de OpenSSL aquí::"
 
 #: ../Doc/license.rst:791
 msgid "expat"
