--- a/glossary.po
+++ b/glossary.po
@@ -418,11 +418,12 @@ msgid ""
 "func:`Py_NewRef` function can be used to create a new :term:`strong "
 "reference`."
 msgstr ""
-"Se recomienda llamar a :c:func:`Py_INCREF` en la :term:`referencia prestada <borrowed reference>` "
-"para convertirla en una :term:`referencia fuerte <strong reference>` in situ, excepto cuando el "
-"objeto no se puede destruir antes del último uso de la referencia prestada. "
-"La función :c:func:`Py_NewRef` se puede utilizar para crear una nueva :term:"
-"`referencia fuerte <strong reference>`."
+"Se recomienda llamar a :c:func:`Py_INCREF` en la :term:`referencia prestada "
+"<borrowed reference>` para convertirla en una :term:`referencia fuerte "
+"<strong reference>` in situ, excepto cuando el objeto no se puede destruir "
+"antes del último uso de la referencia prestada. La función :c:func:"
+"`Py_NewRef` se puede utilizar para crear una nueva :term:`referencia fuerte "
+"<strong reference>`."
 
 #: ../Doc/glossary.rst:174
 msgid "bytes-like object"
@@ -1000,10 +1001,11 @@ msgid ""
 "filesystem_encoding` and :c:member:`~PyConfig.filesystem_errors` members of :"
 "c:type:`PyConfig`."
 msgstr ""
-"La :term:`codificación del sistema de archivos y el manejador de errores <filesystem encoding and error handler>` se configuran al inicio de "
-"Python mediante la función :c:func:`PyConfig_Read`: consulte los miembros :c:"
-"member:`~PyConfig.filesystem_encoding` y :c:member:`~PyConfig."
-"filesystem_errors` de :c:type:`PyConfig`."
+"La :term:`codificación del sistema de archivos y el manejador de errores "
+"<filesystem encoding and error handler>` se configuran al inicio de Python "
+"mediante la función :c:func:`PyConfig_Read`: consulte los miembros :c:member:"
+"`~PyConfig.filesystem_encoding` y :c:member:`~PyConfig.filesystem_errors` "
+"de :c:type:`PyConfig`."
 
 #: ../Doc/glossary.rst:420
 msgid "See also the :term:`locale encoding`"
