Finaliza c-api/iter

--- a/c-api/iter.po
+++ b/c-api/iter.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-16 13:04+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/c-api/iter.rst:6
@@ -30,22 +30,21 @@ msgid "There are two functions specifically for working with iterators."
 msgstr "Hay dos funciones específicas para trabajar con iteradores."
 
 #: ../Doc/c-api/iter.rst:12
-#, fuzzy
 msgid ""
 "Return non-zero if the object *o* supports the iterator protocol, and ``0`` "
 "otherwise.  This function always succeeds."
 msgstr ""
-"Retorna verdadero si el objeto *o* admite el protocolo iterador. Esta "
-"función siempre finaliza con éxito."
+"Retorna un valor distinto de cero si el objeto *o* admite el protocolo de "
+"iterador y ``0`` en caso contrario. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/iter.rst:17
-#, fuzzy
 msgid ""
 "Returns non-zero if the object 'obj' provides :class:`AsyncIterator` "
 "protocols, and ``0`` otherwise.  This function always succeeds."
 msgstr ""
-"Retorna verdadero si el objeto *o* admite el protocolo iterador. Esta "
-"función siempre finaliza con éxito."
+"Retorna un valor distinto de cero si el objeto 'obj' proporciona protocolos :"
+"class:`AsyncIterator` y ``0`` en caso contrario. Esta función siempre tiene "
+"éxito."
 
 #: ../Doc/c-api/iter.rst:24
 msgid ""
@@ -71,23 +70,31 @@ msgstr ""
 msgid ""
 "The enum value used to represent different results of :c:func:`PyIter_Send`."
 msgstr ""
+"El valor de enumeración utilizado para representar diferentes resultados de :"
+"c:func:`PyIter_Send`."
 
 #: ../Doc/c-api/iter.rst:65
 msgid "Sends the *arg* value into the iterator *iter*. Returns:"
-msgstr ""
+msgstr "Envía el valor *arg* al iterador *iter*. Retorna:"
 
 #: ../Doc/c-api/iter.rst:67
 msgid ""
 "``PYGEN_RETURN`` if iterator returns. Return value is returned via *presult*."
 msgstr ""
+"``PYGEN_RETURN`` si el iterador regresa. El valor de retorno se retorna a "
+"través de *presult*."
 
 #: ../Doc/c-api/iter.rst:68
 msgid ""
 "``PYGEN_NEXT`` if iterator yields. Yielded value is returned via *presult*."
 msgstr ""
+"``PYGEN_NEXT`` si el iterador cede. El valor cedido se retorna a través de "
+"*presult*."
 
 #: ../Doc/c-api/iter.rst:69
 msgid ""
 "``PYGEN_ERROR`` if iterator has raised and exception. *presult* is set to "
 "``NULL``."
 msgstr ""
+"``PYGEN_ERROR`` si el iterador ha generado una excepción. *presult* se "
+"establece en ``NULL``."
