--- a/c-api/type.po
+++ b/c-api/type.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 01:37+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/c-api/type.rst:6
@@ -165,6 +165,13 @@ msgid ""
 "in its flags then it **must** implement the GC protocol itself by at least "
 "implementing the :c:member:`~PyTypeObject.tp_traverse` handle."
 msgstr ""
+"Si algunas de las clases base implementan el protocolo GC y el tipo "
+"proporcionado no incluye el :const:`Py_TPFLAGS_HAVE_GC` en sus banderas, "
+"entonces el protocolo GC se implementará automáticamente desde sus padres. "
+"Por el contrario, si el tipo que se está creando incluye :const:"
+"`Py_TPFLAGS_HAVE_GC` en sus banderas, entonces **must** implementará el "
+"protocolo GC en sí mismo al implementar al menos el identificador :c:member:"
+"`~PyTypeObject.tp_traverse`."
 
 #: ../Doc/c-api/type.rst:111
 msgid ""
@@ -190,6 +197,8 @@ msgid ""
 ":c:func:`PyType_GetSlot` can now accept all types. Previously, it was "
 "limited to :ref:`heap types <heap-types>`."
 msgstr ""
+":c:func:`PyType_GetSlot` ahora puede aceptar todos los tipos. Anteriormente, "
+"estaba limitado a :ref:`heap types <heap-types>`."
 
 #: ../Doc/c-api/type.rst:127
 msgid ""
@@ -255,12 +264,11 @@ msgstr ""
 "types <heap-types>`."
 
 #: ../Doc/c-api/type.rst:165
-#, fuzzy
 msgid ""
 "Creates and returns a :ref:`heap type <heap-types>` from the *spec* (:const:"
 "`Py_TPFLAGS_HEAPTYPE`)."
 msgstr ""
-"Crea y retorna un objeto montículo (*heap*) a partir de *spec* (:const:"
+"Crea y retorna un :ref:`heap type <heap-types>` a partir del *spec* (:const:"
 "`Py_TPFLAGS_HEAPTYPE`)."
 
 #: ../Doc/c-api/type.rst:168
@@ -271,9 +279,13 @@ msgid ""
 "*Py_tp_base* slot is used instead. If that also is ``NULL``, the new type "
 "derives from :class:`object`."
 msgstr ""
+"El argumento *bases* se puede utilizar para especificar clases base; puede "
+"ser solo una clase o una tupla de clases. Si *bases* es ``NULL``, en su "
+"lugar se utiliza la ranura *Py_tp_bases*. Si eso también es ``NULL``, se usa "
+"la ranura *Py_tp_base* en su lugar. Si también es ``NULL``, el nuevo tipo se "
+"deriva de :class:`object`."
 
 #: ../Doc/c-api/type.rst:174
-#, fuzzy
 msgid ""
 "The *module* argument can be used to record the module in which the new "
 "class is defined. It must be a module object or ``NULL``. If not ``NULL``, "
@@ -296,6 +308,8 @@ msgid ""
 "The function now accepts a single class as the *bases* argument and ``NULL`` "
 "as the ``tp_doc`` slot."
 msgstr ""
+"La función ahora acepta una sola clase como argumento *bases* y ``NULL`` "
+"como ranura ``tp_doc``."
 
 #: ../Doc/c-api/type.rst:192
 msgid "Equivalent to ``PyType_FromModuleAndSpec(NULL, spec, bases)``."
@@ -479,7 +493,7 @@ msgstr ""
 
 #: ../Doc/c-api/type.rst:282
 msgid "Slots other than ``Py_tp_doc`` may not be ``NULL``."
-msgstr ""
+msgstr "Las ranuras que no sean ``Py_tp_doc`` pueden no ser ``NULL``."
 
 #~ msgid ":c:member:`~PyTypeObject.tp_print`"
 #~ msgstr ":c:member:`~PyTypeObject.tp_print`"
