--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -1087,7 +1087,7 @@ msgstr ""
 
 #: ../Doc/c-api/init_config.rst:695
 msgid "``\"utf-8\"`` if ``nl_langinfo(CODESET)`` returns an empty string."
-msgstr "``\"utf-8\"`` si ``nl_langinfo(CODESET)`` devuelve una cadena vacía."
+msgstr "``\"utf-8\"`` si ``nl_langinfo(CODESET)`` retorna una cadena vacía."
 
 #: ../Doc/c-api/init_config.rst:696
 msgid ""
@@ -2446,340 +2446,3 @@ msgid ""
 msgstr ""
 "Ejemplo de ejecución de código Python entre las fases de inicialización "
 "\"Core\" y \"Main\"::"
-
-#~ msgid "Development mode: see :option:`-X dev <-X>`."
-#~ msgstr "Modo de desarrollo: ver :option:`-X dev <-X>`."
-
-#~ msgid ""
-#~ "Require a debug build of Python (``Py_REF_DEBUG`` macro must be defined)."
-#~ msgstr ""
-#~ "Requerir una compilación de depuración de Python (la macro "
-#~ "``Py_REF_DEBUG`` debe estar definida)."
-
-#~ msgid "Show allocation counts at exit?"
-#~ msgstr "¿Mostrar recuentos de asignación en la salida?"
-
-#~ msgid "Set to 1 by :option:`-X showalloccount <-X>` command line option."
-#~ msgstr ""
-#~ "Establecido en 1 por la opción de línea de comandos :option:`-X "
-#~ "showalloccount <-X>`."
-
-#~ msgid "Need a special Python build with ``COUNT_ALLOCS`` macro defined."
-#~ msgstr ""
-#~ "Necesita una compilación especial de Python con la macro ``COUNT_ALLOCS`` "
-#~ "definida."
-
-#~ msgid "Structures:"
-#~ msgstr "Estructuras:"
-
-#~ msgid ":c:type:`PyConfig`"
-#~ msgstr ":c:type:`PyConfig`"
-
-#~ msgid ":c:type:`PyPreConfig`"
-#~ msgstr ":c:type:`PyPreConfig`"
-
-#~ msgid ":c:type:`PyStatus`"
-#~ msgstr ":c:type:`PyStatus`"
-
-#~ msgid ":c:type:`PyWideStringList`"
-#~ msgstr ":c:type:`PyWideStringList`"
-
-#~ msgid "Functions:"
-#~ msgstr "Funciones:"
-
-#~ msgid ":c:func:`PyConfig_Clear`"
-#~ msgstr ":c:func:`PyConfig_Clear`"
-
-#~ msgid ":c:func:`PyConfig_InitIsolatedConfig`"
-#~ msgstr ":c:func:`PyConfig_InitIsolatedConfig`"
-
-#~ msgid ":c:func:`PyConfig_InitPythonConfig`"
-#~ msgstr ":c:func:`PyConfig_InitPythonConfig`"
-
-#~ msgid ":c:func:`PyConfig_Read`"
-#~ msgstr ":c:func:`PyConfig_Read`"
-
-#~ msgid ":c:func:`PyConfig_SetArgv`"
-#~ msgstr ":c:func:`PyConfig_SetArgv`"
-
-#~ msgid ":c:func:`PyConfig_SetBytesArgv`"
-#~ msgstr ":c:func:`PyConfig_SetBytesArgv`"
-
-#~ msgid ":c:func:`PyConfig_SetBytesString`"
-#~ msgstr ":c:func:`PyConfig_SetBytesString`"
-
-#~ msgid ":c:func:`PyConfig_SetString`"
-#~ msgstr ":c:func:`PyConfig_SetString`"
-
-#~ msgid ":c:func:`PyConfig_SetWideStringList`"
-#~ msgstr ":c:func:`PyConfig_SetWideStringList`"
-
-#~ msgid ":c:func:`PyPreConfig_InitIsolatedConfig`"
-#~ msgstr ":c:func:`PyPreConfig_InitIsolatedConfig`"
-
-#~ msgid ":c:func:`PyPreConfig_InitPythonConfig`"
-#~ msgstr ":c:func:`PyPreConfig_InitPythonConfig`"
-
-#~ msgid ":c:func:`PyStatus_Error`"
-#~ msgstr ":c:func:`PyStatus_Error`"
-
-#~ msgid ":c:func:`PyStatus_Exception`"
-#~ msgstr ":c:func:`PyStatus_Error`"
-
-#~ msgid ":c:func:`PyStatus_Exit`"
-#~ msgstr ":c:func:`PyStatus_Error`"
-
-#~ msgid ":c:func:`PyStatus_IsError`"
-#~ msgstr ":c:func:`PyStatus_IsError`"
-
-#~ msgid ":c:func:`PyStatus_IsExit`"
-#~ msgstr ":c:func:`PyStatus_IsExit`"
-
-#~ msgid ":c:func:`PyStatus_NoMemory`"
-#~ msgstr ":c:func:`PyStatus_NoMemory`"
-
-#~ msgid ":c:func:`PyStatus_Ok`"
-#~ msgstr ":c:func:`PyStatus_Ok`"
-
-#~ msgid ":c:func:`PyWideStringList_Append`"
-#~ msgstr ":c:func:`PyWideStringList_Append`"
-
-#~ msgid ":c:func:`PyWideStringList_Insert`"
-#~ msgstr ":c:func:`PyWideStringList_Insert`"
-
-#~ msgid ":c:func:`Py_ExitStatusException`"
-#~ msgstr ":c:func:`Py_ExitStatusException`"
-
-#~ msgid ":c:func:`Py_InitializeFromConfig`"
-#~ msgstr ":c:func:`Py_InitializeFromConfig`"
-
-#~ msgid ":c:func:`Py_PreInitialize`"
-#~ msgstr ":c:func:`Py_PreInitialize`"
-
-#~ msgid ":c:func:`Py_PreInitializeFromArgs`"
-#~ msgstr ":c:func:`Py_PreInitializeFromArgs`"
-
-#~ msgid ":c:func:`Py_PreInitializeFromBytesArgs`"
-#~ msgstr ":c:func:`Py_PreInitializeFromBytesArgs`"
-
-#~ msgid ":c:func:`Py_GetArgcArgv`"
-#~ msgstr ":c:func:`Py_GetArgcArgv`"
-
-#~ msgid "Set the Python memory allocator"
-#~ msgstr "Establece el asignador de memoria de Python"
-
-#~ msgid "Configure the LC_CTYPE locale"
-#~ msgstr "Configure el entorno local LC_CTYPE"
-
-#~ msgid "Set the UTF-8 mode"
-#~ msgstr "Establece el modo UTF-8"
-
-#~ msgid "``PYMEM_ALLOCATOR_DEFAULT`` (``1``): default memory allocators"
-#~ msgstr ""
-#~ "``PYMEM_ALLOCATOR_DEFAULT`` (``1``): asignadores de memoria "
-#~ "predeterminados"
-
-#~ msgid ""
-#~ "``PYMEM_ALLOCATOR_DEBUG`` (``2``): default memory allocators with debug "
-#~ "hooks"
-#~ msgstr ""
-#~ "``PYMEM_ALLOCATOR_DEBUG`` (``2``): asignadores de memoria predeterminados "
-#~ "con ganchos de depuración"
-
-#~ msgid "``PYMEM_ALLOCATOR_MALLOC`` (``3``): force usage of ``malloc()``"
-#~ msgstr "``PYMEM_ALLOCATOR_MALLOC`` (``3``): fuerza el uso de ``malloc()``"
-
-#~ msgid ""
-#~ "``PYMEM_ALLOCATOR_PYMALLOC`` and ``PYMEM_ALLOCATOR_PYMALLOC_DEBUG`` are "
-#~ "not supported if Python is configured using ``--without-pymalloc``"
-#~ msgstr ""
-#~ "``PYMEM_ALLOCATOR_PYMALLOC`` y ``PYMEM_ALLOCATOR_PYMALLOC_DEBUG`` no son "
-#~ "compatibles si Python está configurado con ``--with-pymalloc``"
-
-#~ msgid ""
-#~ "If non-zero, disable UTF-8 Mode, set the Python filesystem encoding to "
-#~ "``mbcs``, set the filesystem error handler to ``replace``."
-#~ msgstr ""
-#~ "Si no es cero, desactive el modo UTF-8, configure la codificación del "
-#~ "sistema de archivos Python en ``mbcs``, configure el controlador de "
-#~ "errores del sistema de archivos en ``replace``."
-
-#~ msgid "If non-zero, enable the UTF-8 mode."
-#~ msgstr "Si no es cero, habilita el modo UTF-8."
-
-#~ msgid ""
-#~ "Preinitialize Python from *preconfig* preconfiguration and command line "
-#~ "arguments (bytes strings)."
-#~ msgstr ""
-#~ "Preinicializa Python desde la preconfiguración *preconfig* y argumentos "
-#~ "de línea de comando (cadenas de caracteres de bytes)."
-
-#~ msgid ""
-#~ "Preinitialize Python from *preconfig* preconfiguration and command line "
-#~ "arguments (wide strings)."
-#~ msgstr ""
-#~ "Preinicializa Python desde la preconfiguración *preconfig* y argumentos "
-#~ "de línea de comando (cadenas de caracteres anchas)."
-
-#~ msgid ""
-#~ "Set command line arguments: decode bytes using :c:func:`Py_DecodeLocale`."
-#~ msgstr ""
-#~ "Establezca argumentos de línea de comando: decodifique bytes usando :c:"
-#~ "func:`Py_DecodeLocale`."
-
-#~ msgid ""
-#~ "Command line arguments, :data:`sys.argv`. See :c:member:`~PyConfig."
-#~ "parse_argv` to parse :c:member:`~PyConfig.argv` the same way the regular "
-#~ "Python parses Python command line arguments. If :c:member:`~PyConfig."
-#~ "argv` is empty, an empty string is added to ensure that :data:`sys.argv` "
-#~ "always exists and is never empty."
-#~ msgstr ""
-#~ "Argumentos de línea de comando, :data:`sys.argv`. Consulta :c:member:"
-#~ "`~PyConfig.parse_argv` para analizar :c:member:`~PyConfig.argv` de la "
-#~ "misma manera que Python normal analiza los argumentos de la línea de "
-#~ "comandos de Python. Si :c:member:`~PyConfig.argv` está vacío, se agrega "
-#~ "una cadena de caracteres vacía para garantizar que :data:`sys.argv` "
-#~ "siempre exista y nunca esté vacío."
-
-#~ msgid ""
-#~ ":data:`sys._base_executable`: ``__PYVENV_LAUNCHER__`` environment "
-#~ "variable value, or copy of :c:member:`PyConfig.executable`."
-#~ msgstr ""
-#~ ":data:`sys._base_executable`: ``__PYVENV_LAUNCHER__`` valor de la "
-#~ "variable de entorno, o copia de :c:member:`PyConfig.executable`."
-
-#~ msgid ""
-#~ ":data:`sys.platlibdir`: platform library directory name, set at configure "
-#~ "time by ``--with-platlibdir``, overrideable by the ``PYTHONPLATLIBDIR`` "
-#~ "environment variable."
-#~ msgstr ""
-#~ ":data:`sys.platlibdir`: nombre del directorio de la biblioteca de la "
-#~ "plataforma, establecido en el momento de la configuración por ``--with-"
-#~ "platlibdir``, anulable por la variable de entorno ``PYTHONPLATLIBDIR``."
-
-#~ msgid ""
-#~ "If equals to 0, enable unbuffered mode, making the stdout and stderr "
-#~ "streams unbuffered."
-#~ msgstr ""
-#~ "Si es igual a 0, habilite el modo sin búfer, haciendo que las secuencias "
-#~ "stdout y stderr no tengan búfer."
-
-#~ msgid "Valid values: ``always``, ``never`` and ``default``."
-#~ msgstr "Valores válidos: ``always``, ``never`` y ``default``."
-
-#~ msgid ""
-#~ "If non-zero, configure C standard streams (``stdio``, ``stdout``, "
-#~ "``stdout``). For example, set their mode to ``O_BINARY`` on Windows."
-#~ msgstr ""
-#~ "Si no es cero, configure las secuencias estándar C (``stdio``, "
-#~ "``stdout``, ``stdout``). Por ejemplo, configure su modo en ``O_BINARY`` "
-#~ "en Windows."
-
-#~ msgid "``Py_TRACE_REFS`` macro must be defined in build."
-#~ msgstr "El macro ``Py_TRACE_REFS`` debe ser definido en la construcción."
-
-#~ msgid ":data:`sys.exec_prefix`."
-#~ msgstr ":data:`sys.exec_prefix`."
-
-#~ msgid ""
-#~ "Initialized from :envvar:`PYTHONHOME` environment variable value by "
-#~ "default."
-#~ msgstr ""
-#~ "Inicializado desde valor de variable de entorno :envvar:`PYTHONHOME` por "
-#~ "defecto."
-
-#~ msgid "Interactive mode."
-#~ msgstr "Modo interactivo."
-
-#~ msgid ""
-#~ ":data:`sys.path`. If :c:member:`~PyConfig.module_search_paths_set` is "
-#~ "equal to 0, the :c:member:`~PyConfig.module_search_paths` is overridden "
-#~ "by the function calculating the :ref:`Path Configuration <init-path-"
-#~ "config>`."
-#~ msgstr ""
-#~ ":data:`sys.path`. Si :c:member:`~PyConfig.module_search_paths_set` es "
-#~ "igual a 0, el :c:member:`~PyConfig.module_search_paths` es anulado por la "
-#~ "función que calcula :ref:`Configuración de ruta <init-path-config>` ."
-
-#~ msgid ""
-#~ "If non-zero, parse :c:member:`~PyConfig.argv` the same way the regular "
-#~ "Python command line arguments, and strip Python arguments from :c:member:"
-#~ "`~PyConfig.argv`: see :ref:`Command Line Arguments <using-on-cmdline>`."
-#~ msgstr ""
-#~ "Si no es cero, analiza :c:member:`~PyConfig.argv` de la misma manera que "
-#~ "los argumentos regulares de la línea de comandos de Python, y elimine los "
-#~ "argumentos de Python de :c:member:`~PyConfig.argv`: vea :ref:`Argumentos "
-#~ "de línea de comando <using-on-cmdline>`."
-
-#~ msgid ""
-#~ "If equal to 0, suppress warnings when calculating the :ref:`Path "
-#~ "Configuration <init-path-config>` (Unix only, Windows does not log any "
-#~ "warning). Otherwise, warnings are written into ``stderr``."
-#~ msgstr ""
-#~ "Si es igual a 0, suprime las advertencias al calcular :ref:`Configuración "
-#~ "de ruta <init-path-config>` (solo Unix, Windows no registra ninguna "
-#~ "advertencia). De lo contrario, las advertencias se escriben en ``stderr``."
-
-#~ msgid ":data:`sys.prefix`."
-#~ msgstr ":data:`sys.prefix`."
-
-#~ msgid ":data:`sys.pycache_prefix`: ``.pyc`` cache prefix."
-#~ msgstr ":data:`sys.pycache_prefix`: prefijo de caché ``.pyc``."
-
-#~ msgid "``python3 -c COMMAND`` argument. Used by :c:func:`Py_RunMain`."
-#~ msgstr ""
-#~ "Argumento ``python3 -c COMMAND``. Utilizado por :c:func:`Py_RunMain`."
-
-#~ msgid "``python3 FILENAME`` argument. Used by :c:func:`Py_RunMain`."
-#~ msgstr "Argumento ``python3 FILENAME``. Utilizado por :c:func:`Py_RunMain`."
-
-#~ msgid "``python3 -m MODULE`` argument. Used by :c:func:`Py_RunMain`."
-#~ msgstr ""
-#~ "Argumento ``python3 -m MODULE``. Utilizado por :c:func:`Py_RunMain`."
-
-#~ msgid "Skip the first line of the source?"
-#~ msgstr "¿Saltar la primera línea de la fuente?"
-
-#~ msgid "If non-zero, enable verbose mode."
-#~ msgstr "Si no es cero, habilita el modo detallado."
-
-#~ msgid "If non-zero, write ``.pyc`` files."
-#~ msgstr "Si no es cero, escribe los archivos ``.pyc``."
-
-#~ msgid ":data:`sys._xoptions`."
-#~ msgstr ":data:`sys._xoptions`."
-
-#~ msgid "Enable PEG parser? Default: 1."
-#~ msgstr "Habilitar parser PEG? Por defecto: 1."
-
-#~ msgid ""
-#~ "Set to 0 by :option:`-X oldparser <-X>` and :envvar:`PYTHONOLDPARSER`."
-#~ msgstr ""
-#~ "Establecido en 0 por :option:`-X oldparser <-X>` y :envvar:"
-#~ "`PYTHONOLDPARSER`."
-
-#~ msgid "See also :pep:`617`."
-#~ msgstr "Vea también :pep:`617`."
-
-#~ msgid ""
-#~ "If ``parse_argv`` is non-zero, ``argv`` arguments are parsed the same way "
-#~ "the regular Python parses command line arguments, and Python arguments "
-#~ "are stripped from ``argv``: see :ref:`Command Line Arguments <using-on-"
-#~ "cmdline>`."
-#~ msgstr ""
-#~ "Si ``parse_argv`` no es cero, los argumentos ``argv`` se analizan de la "
-#~ "misma manera que Python analiza los argumentos de línea de comando, y los "
-#~ "argumentos de Python se eliminan de ``argv``: ver :ref:`Argumentos de "
-#~ "línea de comando <using-on-cmdline>`."
-
-#~ msgid ""
-#~ "If ``PyImport_FrozenModules``, ``PyImport_AppendInittab()`` or "
-#~ "``PyImport_ExtendInittab()`` are used, they must be set or called after "
-#~ "Python preinitialization and before the Python initialization."
-#~ msgstr ""
-#~ "Si se usan ``PyImport_FrozenModules``, ``PyImport_AppendInittab()`` o "
-#~ "``PyImport_ExtendInittab()``, deben configurarse o llamarse después de la "
-#~ "preinicialización de Python y antes de la inicialización de Python."
-
-#~ msgid "Path Configuration"
-#~ msgstr "Configuración de ruta"
